--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Jani Monoses <jani@ubuntu.com>
-Build-Depends: cdbs, debhelper (>= 5.0.0), usplash-dev
+Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev
 Standards-Version: 3.7.2
 
 Package: xubuntu-artwork
