--- a/usplash/Makefile
+++ b/usplash/Makefile
@@ -10,7 +10,7 @@ INSTALL = /usr/bin/install -c
 INSTALL_DATA = $(INSTALL) -m 644
 INSTALL_PROGRAM = $(INSTALL) -m 755
 
-usplash-theme-xubuntu.so: throbber_back.png.c.o throbber_fore.png.c.o usplash_1024_768.png.c.o usplash_1365_768_scaled.png.c.o usplash_800_600.png.c.o usplash-theme-xubuntu.c.o
+usplash-theme-xubuntu.so: throbber_back.png.c.o throbber_fore.png.c.o usplash_1024_768.png.c.o usplash_1365_768_scaled.png.c.o usplash_800_600.png.c.o usplash_640_480.png.c.o usplash-theme-xubuntu.c.o
 	$(COMPILE) -shared -o $@ $^
 	
 %.png.c: %.png
