--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jani Monoses <jani@ubuntu.com>
-Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev
+Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev (>= 0.5.30)
 Standards-Version: 3.8.0
 
 Package: xubuntu-artwork
@@ -14,7 +14,7 @@ Description: Xubuntu themes and artwork
 
 Package: xubuntu-artwork-usplash
 Architecture: any 
-Depends: ${shlibs:Depends}, initramfs-tools (>= 0.40ubuntu30), usplash (>= 0.4-21)
+Depends: ${shlibs:Depends}, initramfs-tools (>= 0.40ubuntu30), usplash (>= 0.5.30)
 Provides: usplash-theme
 Description: Xubuntu usplash image
  The startup screen shown on Xubuntu boot.
