* debian/control: add Vcs-* fields pointing to LP * Ship artwork in xubuntu-artwork instead of xubuntu-default-settings:   - usr/share/{gdm,pixmaps,themes,xfce4}: added   - debian/xubuntu-artwork.install: added   - xubuntu-artwork conflicts/replaces xubuntu-default-settings (<= 0.51)   - xubuntu-artwork provides gdm-theme.

--- a/debian/control
+++ b/debian/control
@@ -11,11 +11,14 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/trunk/fil
 Package: xubuntu-artwork
 Architecture: all
 Depends: gtk2-engines-murrine, xubuntu-artwork-usplash
+Conflicts: xubuntu-default-settings (<= 0.51)
+Replaces: xubuntu-default-settings (<= 0.51)
+Provides: gdm-theme
 Description: Xubuntu themes and artwork
- This package contains Xubuntu themes, artwork and default settings.
+ This package contains Xubuntu themes and artwork.
 
 Package: xubuntu-artwork-usplash
-Architecture: any 
+Architecture: any
 Depends: ${shlibs:Depends}, initramfs-tools (>= 0.40ubuntu30), usplash (>= 0.5.30)
 Provides: usplash-theme
 Description: Xubuntu usplash image
