--- a/usr/share/gdm/themes/xubuntu/GdmGreeterTheme.desktop
+++ b/usr/share/gdm/themes/xubuntu/GdmGreeterTheme.desktop
@@ -1,7 +1,7 @@
 [GdmGreeterTheme]
 Greeter=Xubuntu.xml
-Name=Xubuntu-Intrepid-Beta
-Description=Xubuntu Intrepid GDM
-Author=Jozsef Mak
-Copyright=(c) 2008 Canonical Ltd
-Screenshot=xubuntu-intrepid-shot.png
+Name=Xubuntu Jaunty Default
+Description=Misty view to the lake.
+Author=Pasi "knome" Lallinaho.
+Copyright=GPL
+Screenshot=screenshot.jpg
