--- a/usr/share/gdm/themes/xubuntu/GdmGreeterTheme.desktop
+++ b/usr/share/gdm/themes/xubuntu/GdmGreeterTheme.desktop
@@ -4,4 +4,4 @@ Name=Xubuntu Jaunty Default
 Description=Misty view to the lake.
 Author=Pasi "knome" Lallinaho.
 Copyright=GPL
-Screenshot=screenshot.jpg
+Screenshot=screenshot.png
