* Modified the theme to use PNGs vs. SVGs due to speed   issues on slower architectures, especially ARM (LP: #351588) * Makefile:   - Takes the source SVGs and converts to PNGs at build time * gdm_svg/Makefile:   - New file to generate pngs, and install them into the DESTDIR * debian/control:   - Added build-dep on librsvg2-bin * debian/xubuntu-artwork.install:   - Install the new PNGs into their proper places

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jani Monoses <jani@ubuntu.com>
-Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev (>= 0.5.30)
+Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev (>= 0.5.30), librsvg2-bin
 Standards-Version: 3.8.0
 Vcs-Bzr: lp:~xubuntu-team/xubuntu-artwork/trunk
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/trunk/files
