--- a/debian/control
+++ b/debian/control
@@ -2,24 +2,53 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: cdbs, debhelper (>= 5.0.0), libusplash-dev (>= 0.5.30), librsvg2-bin
-Standards-Version: 3.8.0
-Vcs-Bzr: lp:~xubuntu-team/xubuntu-artwork/trunk
-Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/trunk/files
+Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30), librsvg2-bin
+Standards-Version: 3.8.1
+Vcs-Bzr: lp:~xubuntu-artwork
+Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/files
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: gtk2-engines-murrine, xubuntu-artwork-usplash, ${misc:Depends}
+Depends: ${misc:Depends}, xubuntu-gdm-theme, usplash-theme-xubuntu,
+ xubuntu-wallpapers, gtk2-engines-murrine
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51)
-Provides: gdm-theme
 Description: Xubuntu themes and artwork
  This package contains Xubuntu themes and artwork.
 
-Package: xubuntu-artwork-usplash
+Package: xubuntu-wallpapers
+Architecture: all
+Depends: ${misc:Depends}
+Conflicts: xubuntu-default-settings (<= 0.51)
+Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
+Description: Xubuntu Wallpapers
+ The default Wallpapers for Xubuntu.
+
+Package: xubuntu-gdm-theme
+Architecture: all
+Depends: ${misc:Depends}
+Conflicts: xubuntu-default-settings (<= 0.51)
+Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
+Provides: gdm-theme
+Description: Xubuntu gdm greeter theme
+ The GDM greeter theme used for a standalone Xubuntu installation.
+ .
+ This package can also be safely installed on other Ubuntu desktops desiring to
+ use this theme.
+
+Package: usplash-theme-xubuntu
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, initramfs-tools (>= 0.40ubuntu30),
  usplash (>= 0.5.30)
+Replaces: xubuntu-artwork-usplash (<< 0.27~)
 Provides: usplash-theme
-Description: Xubuntu usplash image
+Description: Usplash theme for Xubuntu
+ Usplash theme for Xubuntu
+
+Package: xubuntu-artwork-usplash
+Architecture: all
+Depends: ${misc:Depends}, usplash-theme-xubuntu
+Description: Xubuntu usplash image - transitional package
  The startup screen shown on Xubuntu boot.
+ .
+ This package can be safely removed.
