--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
 Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30), librsvg2-bin
 Standards-Version: 3.8.1
-Vcs-Bzr: lp:~xubuntu-artwork
+Vcs-Bzr: lp:xubuntu-artwork
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/files
 
 Package: xubuntu-artwork
