--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/fi
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: ${misc:Depends}, xubuntu-gdm-theme, usplash-theme-xubuntu,
- xubuntu-wallpapers, gtk2-engines-murrine, gnome-brave-icon-theme
+Depends: ${misc:Depends}, usplash-theme-xubuntu, xubuntu-wallpapers,
+ gtk2-engines-murrine, gnome-brave-icon-theme
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51)
 Description: Xubuntu themes and artwork
@@ -23,18 +23,6 @@ Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
 Description: Xubuntu Wallpapers
  The default Wallpapers for Xubuntu.
-
-Package: xubuntu-gdm-theme
-Architecture: all
-Depends: ${misc:Depends}
-Conflicts: xubuntu-default-settings (<= 0.51)
-Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
-Provides: gdm-theme
-Description: Xubuntu gdm greeter theme
- The GDM greeter theme used for a standalone Xubuntu installation.
- .
- This package can also be safely installed on other Ubuntu desktops desiring to
- use this theme.
 
 Package: usplash-theme-xubuntu
 Architecture: any
