--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30), librsvg2-bin
+Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30)
 Standards-Version: 3.8.3
 Vcs-Bzr: lp:xubuntu-artwork
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/files
@@ -10,7 +10,7 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/fi
 Package: xubuntu-artwork
 Architecture: all
 Depends: ${misc:Depends}, gtk2-engines-murrine, gnome-brave-icon-theme
-Recommends: usplash-theme-xubuntu, xubuntu-wallpapers
+Recommends: usplash-theme-xubuntu, xubuntu-gdm-theme, xubuntu-wallpapers
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51)
 Description: Xubuntu themes and artwork
@@ -23,6 +23,19 @@ Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
 Description: Xubuntu Wallpapers
  The default Wallpapers for Xubuntu.
+
+Package: xubuntu-gdm-theme
+Architecture: all
+Depends: ${misc:Depends}, feh
+Recommends: xfce4-power-manager, xfce4-settings, xfwm4 
+Conflicts: xubuntu-default-settings (<= 0.51)
+Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
+Provides: gdm-theme
+Description: Xubuntu gdm greeter theme
+ The GDM greeter theme used for a standalone Xubuntu installation.
+ .
+ This package can also be safely installed on other Ubuntu desktops desiring to
+ use this theme.
 
 Package: usplash-theme-xubuntu
 Architecture: any
