--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30)
+Build-Depends: debhelper (>= 7.0.50~), libusplash-dev (>= 0.5.30)
 Standards-Version: 3.8.3
 Vcs-Bzr: lp:xubuntu-artwork
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/files
