* gdm_svg: dropped, was for gdm legacy. * Makefile: don't build gdm_svg. * usr/share/themes/Albatross: added, new xubuntu gtk theme. * debian/copyright: refreshed. * debian/control:   - don't build-depend on librsvg2-bin, unneeded   - only recommends usplash-theme-xubuntu (LP: #433010), xubuntu-gdm-theme,     xubuntu-wallpapers   - xubuntu-gdm-theme depends on feh, and recommends xfwm4 and xfce4-settings     and xfce4-power-manager. * usr/share/gdm: drop gdm legacy theme and provide desktop files for some   useful apps (power manager, window manager, settings manager…). * debian/xubuntu-gdm-theme.gconf-defaults: added, set logo_icon_name to   xubuntu-logo.

--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,15 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: debhelper (>= 7.0.13), libusplash-dev (>= 0.5.30), librsvg2-bin
+Build-Depends: debhelper (>= 7.0.50~), libusplash-dev (>= 0.5.30)
 Standards-Version: 3.8.3
 Vcs-Bzr: lp:xubuntu-artwork
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-team/xubuntu-artwork/karmic/files
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: ${misc:Depends}, xubuntu-gdm-theme, usplash-theme-xubuntu,
- xubuntu-wallpapers, gtk2-engines-murrine, gnome-brave-icon-theme
+Depends: ${misc:Depends}, gtk2-engines-murrine, gnome-brave-icon-theme
+Recommends: usplash-theme-xubuntu, xubuntu-gdm-theme, xubuntu-wallpapers
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51)
 Description: Xubuntu themes and artwork
@@ -26,7 +26,8 @@ Description: Xubuntu Wallpapers
 
 Package: xubuntu-gdm-theme
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, feh
+Recommends: xfce4-power-manager, xfce4-settings, xfwm4 
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~)
 Provides: gdm-theme
