* Switch from our ugly hack(tm)(r)(c) to gnome-settings-daemon for gdm:   - usr/share/gdm/autostart/LoginWindow/:     + xubuntu-gdm-{background-picture,settings-manager}.desktop: dropped   - debian/control: xubuntu-gdm-theme binary package:     + drop dependency on feh & recommendation on xfce4-settings     + recommends gnome-settings-daemon     + demotes xfce4-power-manager to Suggests   - debian/xubuntu-gdm-theme.gconf-defaults: set icon & gtk themes, reenable     buttons.

--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,9 @@ Description: Xubuntu Wallpapers
 
 Package: xubuntu-gdm-theme
 Architecture: all
-Depends: ${misc:Depends}, feh
-Recommends: xsplash, xfce4-power-manager, xfce4-settings, xfwm4
+Depends: ${misc:Depends}, gnome-settings-daemon
+Recommends: xsplash, gnome-settings-daemon, xfwm4
+Suggests: xfce4-power-manager
 Conflicts: xubuntu-default-settings (<= 0.51), xsplash-artwork, xsplash (<< 0.8)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~),
  xsplash-artwork, xsplash (<< 0.8)
