debian/control: drop spurious conflicts breaking the iso build.

--- a/debian/control
+++ b/debian/control
@@ -52,8 +52,7 @@ Description: Usplash theme for Xubuntu
 Package: xubuntu-icon-theme
 Architecture: all
 Depends: ${misc:Depends}, gnome-icon-theme
-Conflicts: xubuntu-artwork (>> 0.33), xubuntu-artwork (<< 0.39~)
-Replaces: xubuntu-artwork (>> 0.33), xubuntu-artwork (<< 0.39~)
+Replaces: xubuntu-artwork (<< 0.39~)
 Description: Xubuntu icon theme
  The default icon theme for Xubuntu.
 
