* Test: switch from our ugly hack(tm)(r)(c) to gnome-settings-daemon for gdm:   - usr/share/gdm/autostart/LoginWindow/:     + xubuntu-gdm-{background-picture,settings-manager}.desktop: dropped   - debian/control: xubuntu-gdm-theme binary package:     + drop dependency on feh & recommendation on xfce4-settings     + recommends gnome-settings-daemon     + demotes xfce4-power-manager to Suggests   - debian/xubuntu-gdm-theme.gconf-defaults: set icon & gtk themes, re-enable     icons. * debian/control: drop spurious conflicts breaking the iso build.

--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,9 @@ Description: Xubuntu Wallpapers
 
 Package: xubuntu-gdm-theme
 Architecture: all
-Depends: ${misc:Depends}, feh
-Recommends: xsplash, xfce4-power-manager, xfce4-settings, xfwm4
+Depends: ${misc:Depends}
+Recommends: xsplash, gnome-settings-daemon, xfwm4
+Suggests: xfce4-power-manager
 Conflicts: xubuntu-default-settings (<= 0.51), xsplash-artwork, xsplash (<< 0.8)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~),
  xsplash-artwork, xsplash (<< 0.8)
@@ -51,8 +52,7 @@ Description: Usplash theme for Xubuntu
 Package: xubuntu-icon-theme
 Architecture: all
 Depends: ${misc:Depends}, gnome-icon-theme
-Conflicts: xubuntu-artwork (>> 0.33), xubuntu-artwork (<< 0.39~)
-Replaces: xubuntu-artwork (>> 0.33), xubuntu-artwork (<< 0.39~)
+Replaces: xubuntu-artwork (<< 0.39~)
 Description: Xubuntu icon theme
  The default icon theme for Xubuntu.
 
