--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Description: Xubuntu Wallpapers
 Package: xubuntu-gdm-theme
 Architecture: all
 Depends: ${misc:Depends}
-Recommends: xsplash, gnome-settings-daemon, xfwm4
+Recommends: xsplash, xfce4-settings, xfwm4, xfdesktop4
 Suggests: xfce4-power-manager
 Conflicts: xubuntu-default-settings (<= 0.51), xsplash-artwork, xsplash (<< 0.8)
 Replaces: xubuntu-default-settings (<= 0.51), xubuntu-artwork (<< 0.27~),
