* New versioning scheme. * debian/control: xubuntu-gdm-theme depends on gdm... * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: force gtk/icon themes, and   icons in buttons/menus. * debian/xubuntu-gdm-theme.{postrm,preinst}: handles diversion of gdm's   default gconf schema. * usr/share/xubuntu/xdg-gdm: add minimum config (xfwm4) for gdm. * debian/xubuntu-gdm-theme.postinst: make sure previous config bits are   erased on upgrades.

--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,7 @@ Description: Xubuntu Wallpapers
 
 Package: xubuntu-gdm-theme
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, gdm
 Recommends: xsplash, gnome-settings-daemon, xfwm4
 Suggests: xfce4-power-manager
 Conflicts: xubuntu-default-settings (<= 0.51), xsplash-artwork, xsplash (<< 0.8)
