--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: debhelper (>= 7.0.50~), libusplash-dev (>= 0.5.30)
+Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.8.3
 Vcs-Bzr: lp:xubuntu-artwork
 Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-art/xubuntu-artwork/lucid/files
@@ -12,7 +12,6 @@ Architecture: all
 Depends: ${misc:Depends}, murrine-themes
 Recommends: xubuntu-plymouth-theme, xubuntu-gdm-theme, xubuntu-wallpapers,
  xubuntu-icon-theme
-Suggests: usplash-theme-xubuntu
 Conflicts: xubuntu-default-settings (<= 0.51)
 Replaces: xubuntu-default-settings (<= 0.51)
 Description: Xubuntu themes and artwork
@@ -41,20 +40,11 @@ Description: Xubuntu GDM & Xsplash greeter themes
  This package can also be safely installed on other Ubuntu desktops desiring to
  use this theme.
 
-Package: usplash-theme-xubuntu
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, initramfs-tools (>= 0.40ubuntu30),
- usplash (>= 0.5.30)
-Replaces: xubuntu-artwork-usplash (<< 0.27~)
-Provides: usplash-theme
-Description: Usplash theme for Xubuntu
- Usplash theme for Xubuntu
-
 Package: xubuntu-plymouth-theme
 Architecture: all
 Depends: ${misc:Depends}, plymouth
 Description: Plymouth theme for Xubuntu
- Plymouth theme for Xubuntu
+ The Plymouth theme for Xubuntu
 
 Package: xubuntu-icon-theme
 Architecture: all
@@ -62,11 +52,3 @@ Depends: ${misc:Depends}, gnome-icon-theme
 Replaces: xubuntu-artwork (<< 0.39~)
 Description: Xubuntu icon theme
  The default icon theme for Xubuntu.
-
-Package: xubuntu-artwork-usplash
-Architecture: all
-Depends: ${misc:Depends}, usplash-theme-xubuntu
-Description: Xubuntu usplash image - transitional package
- The startup screen shown on Xubuntu boot.
- .
- This package can be safely removed.
