--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-art/xubuntu-artwork/lucid/file
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: ${misc:Depends}, murrine-themes
+Depends: ${misc:Depends}, murrine-themes, gtk2-engines-equinox
 Recommends: xubuntu-plymouth-theme, xubuntu-gdm-theme, xubuntu-wallpapers,
  xubuntu-icon-theme
 Description: Xubuntu themes and artwork
