* Pull Bluebird 0.1.2 bugfixes:   - Fixed Firefox menubar   - Fix Xfce application menu submenus. Make toolbar/statusbar text     larger (default size)   - Fix xfwm4 menu buttons   - Fix tooltip-style (optimizations regarding no/compositing).

--- a/usr/share/themes/Bluebird/gtk-2.0/bars.rc
+++ b/usr/share/themes/Bluebird/gtk-2.0/bars.rc
@@ -48,5 +48,11 @@ style "menubar-menuitem"
 	text[SELECTED] = @selected_fg_color
 }
 
+style "menubar-menuitem-prelight"
+{
+	fg[PRELIGHT] = @selected_fg_color
+}
+
 widget_class "*<GtkMenuBar>.<GtkMenuItem>*" style "menubar-menuitem"
+widget_class "*<GtkMenuItem>*" style "menubar-menuitem-prelight"
 widget_class "*<GtkMenuBar>*" style "pixbuf-menubar"
