* Pull Bluebird 0.2.1 bugfixes:   - Remove equinox-engine dependency (Progressbar, Scale), no need to have     two engines   - Improved Scale and ProgressBar widget styling. Removed etched textstyle   - Fix OpenOffice's menubar * Pull Bluebird 0.2.2 bugfixes:   - Various cleanups. * debian/control:   - drop dependency on gtk2-engines-equinox   - depends on gtk2-engines-murrine explicitely, and demote murrines-themes to     Recommends, for people who still want to use Albatross.

--- a/usr/share/themes/Bluebird/gtk-2.0/bars.rc
+++ b/usr/share/themes/Bluebird/gtk-2.0/bars.rc
@@ -4,7 +4,8 @@ style "pixbuf-menubar"
 {
 	xthickness			= 1
 	ythickness			= 2
-
+	text[NORMAL]			= @selected_fg_color # Fix Openoffice menubar
+	
 	engine "pixmap"
 	{
 		image
@@ -40,7 +41,7 @@ style "menubar-menuitem"
 {
 	bg[PRELIGHT]   = @selected_bg_color
 	bg[SELECTED]   = @selected_bg_color
-	fg[NORMAL]     = "#F1F1F1"
+	fg[NORMAL]     = @selected_fg_color
 	fg[PRELIGHT]   = @selected_fg_color
 	fg[SELECTED]   = @selected_fg_color
 	text[NORMAL]   = @base_color
