--- a/debian/control
+++ b/debian/control
@@ -9,9 +9,9 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-art/xubuntu-artwork/maverick/f
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: ${misc:Depends}, murrine-themes, gtk2-engines-equinox
+Depends: ${misc:Depends}, gtk2-engines-murrine
 Recommends: plymouth-theme-xubuntu-logo, xubuntu-gdm-theme, xubuntu-wallpapers,
- xubuntu-icon-theme
+ xubuntu-icon-theme, murrine-themes
 Description: Xubuntu themes and artwork
  This package contains Xubuntu themes and artwork.
 
