--- a/usr/share/themes/Bluebird/gtk-2.0/panel.rc
+++ b/usr/share/themes/Bluebird/gtk-2.0/panel.rc
@@ -4,7 +4,7 @@ style "theme-panel"
 	ythickness		= 0
 
 	#bg_pixmap[NORMAL]	= "/Panel/panel-bg.png" # Disable for normal panel backgrounds.
-	bg[NORMAL]     = "#06355b"
+	bg[NORMAL]     = "#313131"
 	fg[NORMAL]     = "#f5f5f5"
 	fg[PRELIGHT]   = "#ffffff"
 	fg[ACTIVE]     = "#f5f5f5"
