--- a/usr/share/themes/Bluebird/gtk-2.0/panel.rc
+++ b/usr/share/themes/Bluebird/gtk-2.0/panel.rc
@@ -1,115 +1,45 @@
-style "theme-panel"
+style "theme-panel" = "murrine-dark"
 {
-	xthickness		= 1
-	ythickness		= 0
-
-	#bg_pixmap[NORMAL]	= "/Panel/panel-bg.png" # Disable for normal panel backgrounds.
-	bg[NORMAL]     = "#313131"
-	fg[NORMAL]     = "#f5f5f5"
-	fg[PRELIGHT]   = "#ffffff"
-	fg[ACTIVE]     = "#f5f5f5"
-	text[NORMAL]   = "#f5f5f5"
-	text[PRELIGHT] = "#ffffff"
-	text[ACTIVE]   = "#f5f5f5"
+	xthickness	= 1
+	ythickness	= 0
 	
-	engine "pixmap"
-	{
-		image
-		{
-			function		= BOX
-			recolorable		= TRUE
-			state			= NORMAL
-		}
-		
-		image
-		{
-			function		= BOX
-			recolorable		= TRUE
-			state			= PRELIGHT
-			file			= "Panel/panel-button-hover.png"
-			border			= { 4, 4, 1, 1 }
-			stretch			= TRUE
-		}
-		
-		image
-		{
-			function		= BOX
-			recolorable		= TRUE
-			state			= ACTIVE
-			file			= "Panel/panel-button-active.png"
-			border			= { 4, 4, 1, 1 }
-			stretch			= TRUE
-		}
-
-		image
-		{
-			function		= BOX
-			recolorable		= TRUE
-			state			= SELECTED
-			file			= "Panel/panel-button-active.png"
-			border			= { 4, 4, 1, 1 }
-			stretch			= TRUE
-		}
- 
-		image
-		{
-			function		= BOX
-			recolorable		= TRUE
-			state			= INSENSITIVE
-		} 
-
-		image
-		{
-			function		= ARROW
-			recolorable		= TRUE
-			arrow_direction		= DOWN
-		}
-	}
-}
-
-style "theme-panel-light"
-{
-	xthickness		= 1
-	ythickness		= 0
-
-	fg[NORMAL]	= @fg_color
+	bg[NORMAL]	= "#212936"
+	bg[ACTIVE]	= "#091720"
+	bg[PRELIGHT]	= "#16364d"
+	
+	fg[NORMAL]	= @selected_fg_color
+	fg[PRELIGHT]	= "#ffffff"
+	fg[ACTIVE]	= @selected_fg_color
+	
+	text[NORMAL]   = @selected_fg_color
+	text[PRELIGHT] = "#ffffff"
+	text[ACTIVE]   = @selected_fg_color
 
 	engine "murrine" {
-		textstyle = 1
-		roundness = 0
+		#border_shades	= { 1.3, 0.9 }
+		contrast	= 0.0
+		roundness	= 0
+		glowstyle	= 0
+		glow_shade	= 1.4
+		glazestyle	= 2
 	}
 }
 
 style "theme-panel-text"
 {
-	fg[NORMAL]     = "#f5f5f5"
-	fg[PRELIGHT]   = "#ffffff"
-	fg[ACTIVE]     = "#f5f5f5"
-	text[NORMAL]   = "#f5f5f5"
+	fg[NORMAL]	= @selected_fg_color
+	fg[PRELIGHT]	= "#ffffff"
+	fg[ACTIVE]	= @selected_fg_color
+	
+	text[NORMAL]   = @selected_fg_color
 	text[PRELIGHT] = "#ffffff"
-	text[ACTIVE]   = "#f5f5f5"
+	text[ACTIVE]   = @selected_fg_color
 }
 
 style "theme-main-menu-text" = "theme-panel-text"
 {
 	fg[PRELIGHT]   = "#ffffff"
 	text[PRELIGHT] = "#ffffff"
-}
-
-style "theme-panel-handle" 
-{
-    engine "pixmap"
-    {    
-        image
-        {
-		function 	= HANDLE
-        }    
- 
-	image
-        {
-        	function 	= HANDLE
-        }
-    }
 }
 
 widget "*PanelWidget*"              style "theme-panel"
@@ -129,8 +59,8 @@ widget_class "*Applet*Tomboy*"      style "theme-panel"
 widget_class "*Applet*Netstatus*"   style "theme-panel"
 
 # Fixes for tooltip text in some apps.
-widget_class "*Notif*Beagle*"       style "theme-panel-light"
-widget_class "*Notif*Brasero*"      style "theme-panel-light"
+widget_class "*Notif*Beagle*"       style "theme-panel"
+widget_class "*Notif*Brasero*"      style "theme-panel"
 
 # XFCE panel theming.
 widget "*Xfce*Panel*"               style "theme-panel"
@@ -141,37 +71,3 @@ widget_class "*Panel*MenuBar*"      style "theme-main-menu-text"
 widget_class "*Panel*<GtkMenuBar>*" style "theme-main-menu-text"
 widget "*.clock-applet-button.*"    style "theme-panel-text"
 widget "*PanelApplet*"              style "theme-panel-text"
-
-# Hide ugly handle
-class "PanelAppletFrame"            style:highest "theme-panel-handle"
-
-# The following removes the arrows from the panel
-
-style "panel-arrow-remove"
-
-{
-engine "pixmap"
-	{
-	image
-	{
-		function	= ARROW
-		recolorable	= TRUE
-		overlay_file	= "Panel/arrow-blank.png"
-		overlay_border	= {2,2,2,2}
-		overlay_stretch	= FALSE
-		arrow_direction	= UP
-	}
-
-	image
-	{
-		function	= ARROW
-		recolorable	= TRUE
-		overlay_file	= "Panel/arrow-blank.png"
-		overlay_border	= {2,2,2,2}
-		overlay_stretch	= FALSE
-		arrow_direction	= DOWN
-	}
-	}
-}
-
-widget_class "*PanelToplevel*" style "panel-arrow-remove"
