--- a/usr/share/themes/greybird/gtk-2.0/panel.rc
+++ b/usr/share/themes/greybird/gtk-2.0/panel.rc
@@ -3,11 +3,6 @@ style "theme-panel" = "murrine-dark"
 	xthickness	= 1
 	ythickness	= 0
 	
-	bg[NORMAL]	= "#686868"
-	bg[ACTIVE]	= "#464646"
-	bg[PRELIGHT]	= "#464646"
-	bg[SELECTED]	= "#2f2f2f"
-	
 	fg[NORMAL]	= @selected_fg_color
 	fg[PRELIGHT]	= "#ffffff"
 	fg[ACTIVE]	= @selected_fg_color
@@ -40,15 +35,20 @@ style "theme-panel-text"
 	text[ACTIVE]   = @selected_fg_color
 }
 
-style "panel-entry"
+style "panel-entry" = "murrine-dark"
 {
 	fg[NORMAL]	= @text_color
 	fg[PRELIGHT]	= @text_color
-	fg[ACTIVE]	= @text_color	
+	fg[ACTIVE]	= @text_color
+	fg[SELECTED]	= @text_color
+	fg[INSENSITIVE]	= @text_color
 
-	text[NORMAL]   = @text_color
-	text[PRELIGHT] = @text_color
-	text[ACTIVE]   = @text_color
+	text[NORMAL]		= @text_color
+	text[PRELIGHT]		= @text_color
+	text[ACTIVE]		= @text_color
+	text[SELECTED]		= @text_color
+	text[INSENSITIVE]	= @text_color
+
 }
 
 style "theme-main-menu-text" = "theme-panel-text"
@@ -88,3 +88,16 @@ widget_class "*Panel*MenuBar*"      style "theme-main-menu-text"
 widget_class "*Panel*<GtkMenuBar>*" style "theme-main-menu-text"
 widget "*.clock-applet-button.*"    style "theme-panel-text"
 widget "*PanelApplet*"              style "theme-panel-text"
+
+# dark menus
+widget_class "*<GtkMenu>*"              	style "murrine-dark"
+widget_class "*<GtkMenuItem>*"          	style "murrine-wide-dark"
+widget_class "*<GtkMenuItem>.*.<GtkCalendar>"	style "murrine-dark"
+widget_class "*<GtkMenuItem>.*.<GtkEntry>"	style "panel-entry"
+widget_class "*<GtkMenuItem>.*.<GtkScale>" 	style "murrine-scale-dark"
+widget_class "*<GtkMenuBar>*"           	style "murrine-menubar"
+widget "*.gtk-combobox-popup-menu.*"   		style "murrine-wide-dark"
+
+# dark bg and black text for gdm's panel
+widget_class "*GdmGreeterPanel*" style "panel-entry"
+widget "*GdmClockWidget*" style "murrine-dark"
