greybird, and handle replaces/breaks correctly.

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,9 @@ Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-art/xubuntu-artwork/maverick/f
 
 Package: xubuntu-artwork
 Architecture: all
-Depends: ${misc:Depends}, gtk2-engines-murrine, murrine-themes (>> 0.98.2),
+Breaks: murrine-themes (<< 0.98.2)
+Replaces: murrine-themes (<< 0.98.2)
+Depends: ${misc:Depends}, gtk2-engines-murrine, murrine-themes (>= 0.98.2),
  libnewt0.52 (>= 0.52.11-2ubuntu7)
 Recommends: plymouth-theme-xubuntu-logo, plymouth-theme-xubuntu-text,
  xubuntu-wallpapers, xubuntu-icon-theme
