lo-style-elementary provides libreoffice-style

--- a/debian/control
+++ b/debian/control
@@ -54,6 +54,7 @@ Package: libreoffice-style-elementary
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: libreoffice-core
+Provides: libreoffice-style
 Description: office productivity suite -- elementary symbol style
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
