--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xubuntu-artwork
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-Build-Depends: debhelper (>= 12)
+Build-Depends: debhelper-compat (= 12)
 Standards-Version: 4.4.0
 Rules-Requires-Root: no
 Vcs-Git: https://git.launchpad.net/xubuntu-artwork.git
